Added Ability, ApplyInfiniteEffectsOrDestroyAbility, ContextAwareAbility, RandomDirectionalSpreadAbility, ReplaceItemsInHandAbility, RightHandParticlesAbility, NightVisionAbility Made cat ring model more cubic Moved BlockStateItem to TommyLib Refactored names and locations of miraculous assets Updated deps Made license url autofill Added Tool Wheel (WIP) Fixed small staff being strong Made MiraculousType a data-driven record and made miraculous related stuff generic Removed hotbar_single.png Removed MineraculousClientConfig Added ability serializer registry and ability dynamic registry Removed MineraculousEntityDataSerializers#CHARGED MineraculousEntityDataSerializers#MIRACULOUS_TYPE Removed ladybug food tags for now Added "mineraculous:curios_ring" item display context Added MiraculousData#look Added helper methods to MiraculousDataSet Added RadialMenuScreen Renamed miraculous_type references to miraculous