@@ -1,54 +1,45 @@
 package dev.thomasglasser.mineraculous.world.entity;
 
 import dev.thomasglasser.mineraculous.Mineraculous;
-import dev.thomasglasser.mineraculous.advancements.MineraculousCriteriaTriggers;
-import dev.thomasglasser.mineraculous.advancements.critereon.MiraculousUsePowerTrigger;
 import dev.thomasglasser.mineraculous.client.MineraculousClientUtils;
 import dev.thomasglasser.mineraculous.client.MineraculousKeyMappings;
 import dev.thomasglasser.mineraculous.client.gui.screens.inventory.ExternalCuriosInventoryScreen;
 import dev.thomasglasser.mineraculous.core.component.MineraculousDataComponents;
 import dev.thomasglasser.mineraculous.network.ClientboundMiraculousTransformPayload;
 import dev.thomasglasser.mineraculous.network.ServerboundRequestInventorySyncPayload;
+import dev.thomasglasser.mineraculous.network.ServerboundRequestMiraculousDataSetSyncPayload;
 import dev.thomasglasser.mineraculous.network.ServerboundTryBreakItemPayload;
 import dev.thomasglasser.mineraculous.network.ServerboundWakeUpPayload;
 import dev.thomasglasser.mineraculous.server.MineraculousServerConfig;
-import dev.thomasglasser.mineraculous.tags.MineraculousBlockTags;
 import dev.thomasglasser.mineraculous.tags.MineraculousItemTags;
 import dev.thomasglasser.mineraculous.world.attachment.MineraculousAttachmentTypes;
 import dev.thomasglasser.mineraculous.world.effect.MineraculousMobEffects;
-import dev.thomasglasser.mineraculous.world.entity.kwami.Kwami;
+import dev.thomasglasser.mineraculous.world.entity.miraculous.Miraculous;
+import dev.thomasglasser.mineraculous.world.entity.miraculous.ability.Ability;
+import dev.thomasglasser.mineraculous.world.entity.miraculous.ability.NightVisionAbility;
 import dev.thomasglasser.mineraculous.world.entity.npc.MineraculousVillagerTrades;
 import dev.thomasglasser.mineraculous.world.item.MineraculousItems;
 import dev.thomasglasser.mineraculous.world.item.MiraculousItem;
+import dev.thomasglasser.mineraculous.world.item.armor.MineraculousArmors;
 import dev.thomasglasser.mineraculous.world.item.component.KwamiData;
 import dev.thomasglasser.mineraculous.world.item.curio.CuriosUtils;
-import dev.thomasglasser.mineraculous.world.level.block.MineraculousBlocks;
 import dev.thomasglasser.mineraculous.world.level.storage.ArmorData;
 import dev.thomasglasser.mineraculous.world.level.storage.MiraculousData;
 import dev.thomasglasser.mineraculous.world.level.storage.MiraculousDataSet;
 import dev.thomasglasser.tommylib.api.client.ClientUtils;
 import dev.thomasglasser.tommylib.api.platform.TommyLibServices;
-import dev.thomasglasser.tommylib.api.registration.DeferredItem;
-import dev.thomasglasser.tommylib.api.world.item.armor.ArmorSet;
 import java.util.Arrays;
 import java.util.List;
 import java.util.function.BiFunction;
-import net.minecraft.core.BlockPos;
-import net.minecraft.core.Direction;
 import net.minecraft.core.Holder;
 import net.minecraft.core.component.DataComponents;
 import net.minecraft.nbt.CompoundTag;
 import net.minecraft.network.chat.Component;
 import net.minecraft.network.chat.Style;
-import net.minecraft.network.protocol.game.ClientboundUpdateMobEffectPacket;
-import net.minecraft.resources.ResourceLocation;
+import net.minecraft.resources.ResourceKey;
 import net.minecraft.server.level.ServerLevel;
 import net.minecraft.server.level.ServerPlayer;
-import net.minecraft.tags.BlockTags;
-import net.minecraft.util.RandomSource;
 import net.minecraft.util.Unit;
-import net.minecraft.world.InteractionHand;
-import net.minecraft.world.InteractionResult;
 import net.minecraft.world.SimpleContainer;
 import net.minecraft.world.effect.MobEffect;
 import net.minecraft.world.effect.MobEffectInstance;
@@ -58,16 +49,11 @@ import net.minecraft.world.entity.EntityType;
 import net.minecraft.world.entity.EquipmentSlot;
 import net.minecraft.world.entity.LivingEntity;
 import net.minecraft.world.entity.player.Player;
-import net.minecraft.world.entity.vehicle.VehicleEntity;
-import net.minecraft.world.item.ArmorItem;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.enchantment.Enchantments;
 import net.minecraft.world.level.Level;
-import net.minecraft.world.level.block.Block;
-import net.minecraft.world.level.block.MangroveRootsBlock;
-import net.minecraft.world.level.block.state.BlockState;
-import net.neoforged.neoforge.common.util.TriState;
 import net.neoforged.neoforge.event.entity.EntityAttributeCreationEvent;
+import net.neoforged.neoforge.event.entity.EntityJoinLevelEvent;
 import net.neoforged.neoforge.event.entity.living.LivingDamageEvent;
 import net.neoforged.neoforge.event.entity.living.LivingDeathEvent;
 import net.neoforged.neoforge.event.entity.living.LivingHealEvent;
@@ -77,17 +63,14 @@ import net.neoforged.neoforge.event.entity.player.PlayerInteractEvent;
 import net.neoforged.neoforge.event.tick.EntityTickEvent;
 import net.neoforged.neoforge.event.tick.PlayerTickEvent;
 import net.neoforged.neoforge.event.village.VillagerTradesEvent;
-import org.jetbrains.annotations.Nullable;
 
 public class MineraculousEntityEvents {
     public static final String TAG_WAITTICKS = "WaitTicks";
-    public static final String TAG_HASCATVISION = "HasCatVision";
+    public static final String TAG_HASNIGHTVISION = "HasNightVision";
     public static final String TAG_TAKETICKS = "TakeTicks";
     public static final String TAG_CATACLYSMED = "Cataclysmed";
 
     public static final String ITEM_BROKEN_KEY = "mineraculous.item_broken";
-
-    public static final ResourceLocation CAT_VISION_SHADER = ResourceLocation.withDefaultNamespace("shaders/post/creeper.json");
 
     public static final BiFunction<Holder<MobEffect>, Integer, MobEffectInstance> INFINITE_HIDDEN_EFFECT = (effect, amplifier) -> new MobEffectInstance(effect, -1, amplifier, false, false, false);
 
@@ -148,10 +131,10 @@ public class MineraculousEntityEvents {
         LivingEntity entity = event.getEntity();
         MiraculousDataSet miraculousDataSet = entity.getData(MineraculousAttachmentTypes.MIRACULOUS.get());
         if (entity instanceof ServerPlayer player) {
-            miraculousDataSet.keySet().forEach(type -> {
-                MiraculousData data = miraculousDataSet.get(type);
+            miraculousDataSet.keySet().forEach(miraculous -> {
+                MiraculousData data = miraculousDataSet.get(miraculous);
                 if (data.transformed())
-                    handleTransformation(player, type, data, false);
+                    handleTransformation(player, miraculous, data, false);
                 KwamiData kwamiData = data.miraculousItem().get(MineraculousDataComponents.KWAMI_DATA.get());
                 if (kwamiData != null && player.serverLevel().getEntity(kwamiData.uuid()) instanceof Kwami kwami) {
                     renounceMiraculous(data.miraculousItem(), kwami);
@@ -163,9 +146,9 @@ public class MineraculousEntityEvents {
         }
     }
 
-    public static void handleTransformation(Player player, MiraculousType type, MiraculousData data, boolean transform) {
+    public static void handleTransformation(ServerPlayer player, ResourceKey<Miraculous> miraculous, MiraculousData data, boolean transform) {
         if (player != null) {
-            ServerLevel serverLevel = (ServerLevel) player.level();
+            ServerLevel serverLevel = player.serverLevel();
             ItemStack miraculousStack = data.miraculousItem();
             if (transform) {
                 // Transform
@@ -178,34 +161,31 @@ public class MineraculousEntityEvents {
 
                         ArmorData armor = new ArmorData(player.getItemBySlot(EquipmentSlot.HEAD), player.getItemBySlot(EquipmentSlot.CHEST), player.getItemBySlot(EquipmentSlot.LEGS), player.getItemBySlot(EquipmentSlot.FEET));
                         entity.setData(MineraculousAttachmentTypes.STORED_ARMOR, armor);
-                        ArmorSet set = miraculousItem.getArmorSet();
-                        if (set != null) {
-                            for (EquipmentSlot slot : EquipmentSlot.values()) {
-                                DeferredItem<ArmorItem> armorPiece = set.getForSlot(slot);
-                                if (!(armorPiece == null)) {
-                                    ItemStack stack = armorPiece.get().getDefaultInstance();
-                                    stack.enchant(serverLevel.holderOrThrow(Enchantments.BINDING_CURSE), 1);
-                                    stack.set(MineraculousDataComponents.HIDE_ENCHANTMENTS.get(), Unit.INSTANCE);
-                                    player.setItemSlot(slot, stack);
-                                }
-                            }
+                        for (EquipmentSlot slot : new EquipmentSlot[] { EquipmentSlot.HEAD, EquipmentSlot.CHEST, EquipmentSlot.LEGS, EquipmentSlot.FEET }) {
+                            ItemStack stack = MineraculousArmors.MIRACULOUS.getForSlot(slot).get().getDefaultInstance();
+                            stack.enchant(serverLevel.holderOrThrow(Enchantments.BINDING_CURSE), 1);
+                            stack.set(MineraculousDataComponents.HIDE_ENCHANTMENTS.get(), Unit.INSTANCE);
+                            stack.set(MineraculousDataComponents.MIRACULOUS, miraculous);
+                            player.setItemSlot(slot, stack);
                         }
 
                         miraculousStack.enchant(serverLevel.holderOrThrow(Enchantments.BINDING_CURSE), 1);
                         miraculousStack.set(MineraculousDataComponents.HIDE_ENCHANTMENTS.get(), Unit.INSTANCE);
 
-                        ItemStack tool = miraculousItem.getTool() == null ? ItemStack.EMPTY : miraculousItem.getTool().getDefaultInstance();
+                        ItemStack tool = serverLevel.holderOrThrow(miraculousStack.get(MineraculousDataComponents.MIRACULOUS)).value().tool();
                         tool.set(MineraculousDataComponents.KWAMI_DATA.get(), new KwamiData(kwami.getUUID(), kwami.isCharged()));
                         miraculousStack.set(MineraculousDataComponents.POWERED.get(), Unit.INSTANCE);
-                        data = new MiraculousData(true, miraculousStack, data.curiosData(), tool, data.powerLevel(), false, false, data.name());
-                        player.getData(MineraculousAttachmentTypes.MIRACULOUS.get()).put(player, type, data, true);
+                        data = new MiraculousData(true, miraculousStack, data.curiosData(), tool, data.powerLevel(), false, false, data.name(), data.look());
+                        player.getData(MineraculousAttachmentTypes.MIRACULOUS.get()).put(player, miraculous, data, true);
                         CuriosUtils.setStackInSlot(player, data.curiosData(), miraculousStack, true);
-                        TommyLibServices.NETWORK.sendToAllClients(new ClientboundMiraculousTransformPayload(type, data), serverLevel.getServer());
+                        TommyLibServices.NETWORK.sendToAllClients(new ClientboundMiraculousTransformPayload(miraculous, data), serverLevel.getServer());
                         int powerLevel = data.powerLevel();
                         MIRACULOUS_EFFECTS.forEach(effect -> player.addEffect(INFINITE_HIDDEN_EFFECT.apply(effect, powerLevel)));
                         player.addItem(tool);
                         kwami.discard();
                         // TODO: Advancement trigger with miraculous item context
+                        MiraculousData finalData = data;
+                        serverLevel.holderOrThrow(miraculous).value().passiveAbilities().forEach(ability -> ability.value().transform(miraculous, finalData, serverLevel, player.blockPosition(), player));
                     } else {
                         // TODO: Hungry sound
 //						kwami.playSound(kwami.getHungrySound());
@@ -213,11 +193,11 @@ public class MineraculousEntityEvents {
                 } else {
                     miraculousStack.remove(MineraculousDataComponents.KWAMI_DATA.get());
                     CuriosUtils.setStackInSlot(player, data.curiosData(), miraculousStack, true);
-                    player.getData(MineraculousAttachmentTypes.MIRACULOUS.get()).put(player, type, new MiraculousData(true, miraculousStack, data.curiosData(), data.tool(), data.powerLevel(), false, false, data.name()), true);
+                    player.getData(MineraculousAttachmentTypes.MIRACULOUS.get()).put(player, miraculous, new MiraculousData(true, miraculousStack, data.curiosData(), data.tool(), data.powerLevel(), false, false, data.name(), data.look()), true);
                 }
             } else {
                 // De-transform
-                Kwami kwami = summonKwami(player.level(), type, data, player);
+                Kwami kwami = summonKwami(player.level(), miraculous, data, player);
                 if (kwami != null) {
                     kwami.setCharged(false);
                 } else {
@@ -243,10 +223,12 @@ public class MineraculousEntityEvents {
                         return false;
                     }, 1, new SimpleContainer(data.tool()));
                 }
-                data = new MiraculousData(false, miraculousStack, data.curiosData(), ItemStack.EMPTY, data.powerLevel(), false, false, data.name());
-                player.getData(MineraculousAttachmentTypes.MIRACULOUS.get()).put(player, type, data, true);
-                TommyLibServices.NETWORK.sendToAllClients(new ClientboundMiraculousTransformPayload(type, data), serverLevel.getServer());
+                data = new MiraculousData(false, miraculousStack, data.curiosData(), ItemStack.EMPTY, data.powerLevel(), false, false, data.name(), data.look());
+                player.getData(MineraculousAttachmentTypes.MIRACULOUS.get()).put(player, miraculous, data, true);
+                TommyLibServices.NETWORK.sendToAllClients(new ClientboundMiraculousTransformPayload(miraculous, data), serverLevel.getServer());
                 MIRACULOUS_EFFECTS.forEach(player::removeEffect);
+                MiraculousData finalData = data;
+                serverLevel.holderOrThrow(miraculous).value().passiveAbilities().forEach(ability -> ability.value().detransform(miraculous, finalData, serverLevel, player.blockPosition(), player));
             }
         }
     }
@@ -263,10 +245,11 @@ public class MineraculousEntityEvents {
         return false;
     }
 
-    public static Kwami summonKwami(Level level, MiraculousType type, MiraculousData miraculousData, Player player) {
-        if (miraculousData.miraculousItem().getItem() instanceof MiraculousItem miraculousItem) {
-            Kwami kwami = miraculousItem.getKwamiType().create(level);
+    public static Kwami summonKwami(Level level, ResourceKey<Miraculous> miraculous, MiraculousData miraculousData, Player player) {
+        if (miraculousData.miraculousItem().has(MineraculousDataComponents.MIRACULOUS)) {
+            Kwami kwami = MineraculousEntityTypes.KWAMI.get().create(level);
             if (kwami != null) {
+                kwami.setMiraculous(miraculous);
                 KwamiData kwamiData = miraculousData.miraculousItem().get(MineraculousDataComponents.KWAMI_DATA.get());
                 if (kwamiData != null) {
                     kwami.setUUID(kwamiData.uuid());
@@ -280,125 +263,93 @@ public class MineraculousEntityEvents {
 
                 miraculousData.miraculousItem().set(MineraculousDataComponents.KWAMI_DATA.get(), new KwamiData(kwami.getUUID(), kwami.isCharged()));
                 CuriosUtils.setStackInSlot(player, miraculousData.curiosData(), miraculousData.miraculousItem(), true);
-                player.getData(MineraculousAttachmentTypes.MIRACULOUS.get()).put(player, type, new MiraculousData(false, miraculousData.miraculousItem(), miraculousData.curiosData(), miraculousData.tool(), miraculousData.powerLevel(), false, false, miraculousData.name()), true);
+                player.getData(MineraculousAttachmentTypes.MIRACULOUS.get()).put(player, miraculous, new MiraculousData(false, miraculousData.miraculousItem(), miraculousData.curiosData(), miraculousData.tool(), miraculousData.powerLevel(), false, false, miraculousData.name(), miraculousData.look()), true);
+                return kwami;
             }
-            return kwami;
         }
         return null;
     }
 
-    public static InteractionResult testAndApplyCataclysmEffects(ServerPlayer entity, Entity target, InteractionHand hand) {
-        MiraculousDataSet miraculousDataSet = entity.getData(MineraculousAttachmentTypes.MIRACULOUS);
-        MiraculousData catMiraculousData = miraculousDataSet.get(MiraculousType.CAT);
-        if (hand == InteractionHand.MAIN_HAND && catMiraculousData.transformed() && catMiraculousData.mainPowerActive()) {
-            miraculousDataSet.put(entity, MiraculousType.CAT, new MiraculousData(true, catMiraculousData.miraculousItem(), catMiraculousData.curiosData(), catMiraculousData.tool(), catMiraculousData.powerLevel(), true, false, catMiraculousData.name()), true);
-            int level = catMiraculousData.powerLevel();
-            if (target instanceof LivingEntity livingEntity) {
-                MobEffectInstance effect = new MobEffectInstance(MineraculousMobEffects.CATACLYSMED.asReferenceFrom(entity.level().registryAccess()), -1, level);
-                livingEntity.addEffect(effect);
-                MineraculousCriteriaTriggers.USED_MIRACULOUS_POWER.get().trigger(entity, MiraculousType.CAT, MiraculousUsePowerTrigger.Context.LIVING_ENTITY);
-                livingEntity.setLastHurtByPlayer(entity);
-                entity.connection.send(new ClientboundUpdateMobEffectPacket(livingEntity.getId(), effect, true));
-            } else if (target instanceof VehicleEntity vehicle) {
-                target.discard();
-                Block.popResource(target.level(), vehicle.blockPosition(), MineraculousItems.CATACLYSM_DUST.get().getDefaultInstance());
-            } else {
-                target.hurt(entity.damageSources().indirectMagic(entity, entity), 1024);
-            }
-            MineraculousCriteriaTriggers.USED_MIRACULOUS_POWER.get().trigger(entity, MiraculousType.CAT, MiraculousUsePowerTrigger.Context.ENTITY);
-            return InteractionResult.SUCCESS;
-        }
-        return InteractionResult.PASS;
-    }
-
     public static void onEntityInteract(PlayerInteractEvent.EntityInteract event) {
-        if (event.getEntity() instanceof ServerPlayer serverPlayer)
-            event.setCancellationResult(testAndApplyCataclysmEffects(serverPlayer, event.getTarget(), event.getHand()));
+        event.getEntity().getData(MineraculousAttachmentTypes.MIRACULOUS).getTransformed().forEach(key -> {
+            Miraculous miraculous = event.getEntity().level().holderOrThrow(key).value();
+            MiraculousData data = event.getEntity().getData(MineraculousAttachmentTypes.MIRACULOUS.get()).get(key);
+            miraculous.passiveAbilities().forEach(ability -> ability.value().perform(key, data, event.getEntity().level(), event.getPos(), event.getEntity(), Ability.Context.from(event.getTarget())));
+            if (data.mainPowerActive()) {
+                boolean usedPower = miraculous.activeAbility().value().perform(key, data, event.getEntity().level(), event.getPos(), event.getEntity(), Ability.Context.from(event.getTarget()));
+                if (usedPower)
+                    event.getEntity().getData(MineraculousAttachmentTypes.MIRACULOUS).put(event.getEntity(), key, new MiraculousData(data.transformed(), data.miraculousItem(), data.curiosData(), data.tool(), data.powerLevel(), true, false, data.name(), data.look()), !event.getLevel().isClientSide);
+            }
+        });
     }
 
     public static void onAttackEntity(AttackEntityEvent event) {
-        if (event.getEntity() instanceof ServerPlayer serverPlayer && !(event.getTarget() instanceof LivingEntity))
-            testAndApplyCataclysmEffects(serverPlayer, event.getTarget(), InteractionHand.MAIN_HAND);
+        event.getEntity().getData(MineraculousAttachmentTypes.MIRACULOUS).getTransformed().forEach(key -> {
+            Miraculous miraculous = event.getEntity().level().holderOrThrow(key).value();
+            MiraculousData data = event.getEntity().getData(MineraculousAttachmentTypes.MIRACULOUS.get()).get(key);
+            miraculous.passiveAbilities().forEach(ability -> ability.value().perform(key, data, event.getEntity().level(), event.getEntity().blockPosition(), event.getEntity(), Ability.Context.from(event.getTarget())));
+            if (data.mainPowerActive()) {
+                boolean usedPower = miraculous.activeAbility().value().perform(key, data, event.getEntity().level(), event.getEntity().blockPosition(), event.getEntity(), Ability.Context.from(event.getTarget()));
+                if (usedPower)
+                    event.getEntity().getData(MineraculousAttachmentTypes.MIRACULOUS).put(event.getEntity(), key, new MiraculousData(data.transformed(), data.miraculousItem(), data.curiosData(), data.tool(), data.powerLevel(), true, false, data.name(), data.look()), !event.getEntity().level().isClientSide);
+            }
+        });
     }
 
     public static void onLivingAttack(LivingDamageEvent.Post event) {
-        if (event.getSource().getDirectEntity() instanceof ServerPlayer serverPlayer) {
-            testAndApplyCataclysmEffects(serverPlayer, event.getEntity(), InteractionHand.MAIN_HAND);
-        }
-    }
-
-    public static InteractionResult testAndApplyCataclysmToBlocks(ServerPlayer entity, BlockPos pos, InteractionHand hand, @Nullable Direction nextPosDirection, int blocksAffected) {
-        Level level = entity.level();
-        MiraculousDataSet miraculousDataSet = entity.getData(MineraculousAttachmentTypes.MIRACULOUS);
-        MiraculousData catMiraculousData = miraculousDataSet.get(MiraculousType.CAT);
-        if (hand == InteractionHand.MAIN_HAND && catMiraculousData.transformed() && catMiraculousData.mainPowerActive()) {
-            BlockState state = level.getBlockState(pos);
-            if (state.is(MineraculousBlockTags.CATACLYSM_IMMUNE) || blocksAffected >= Math.max(entity.getData(MineraculousAttachmentTypes.MIRACULOUS).get(MiraculousType.CAT).powerLevel(), 1) * 100)
-                return InteractionResult.PASS;
-            blocksAffected++;
-
-            int range = 3;
-            for (int i = -range; i <= range; i++) {
-                for (int j = -range; j <= range; j++) {
-                    BlockPos newPos = pos.offset(i, 0, j);
-                    BlockState newState = level.getBlockState(newPos);
-                    if (newState.is(BlockTags.LOGS) || newState.is(BlockTags.LEAVES) || newState.getBlock() instanceof MangroveRootsBlock) {
-                        level.setBlock(newPos, MineraculousBlocks.CATACLYSM_BLOCK.get().defaultBlockState(), Block.UPDATE_ALL);
-                    }
+        Entity attacker = event.getSource().getDirectEntity();
+        LivingEntity victim = event.getEntity();
+        if (attacker instanceof LivingEntity livingEntity) {
+            livingEntity.getData(MineraculousAttachmentTypes.MIRACULOUS).getTransformed().forEach(key -> {
+                Miraculous miraculous = livingEntity.level().holderOrThrow(key).value();
+                MiraculousData data = livingEntity.getData(MineraculousAttachmentTypes.MIRACULOUS.get()).get(key);
+                miraculous.passiveAbilities().forEach(ability -> ability.value().perform(key, data, livingEntity.level(), livingEntity.blockPosition(), livingEntity, Ability.Context.from(victim)));
+                if (data.mainPowerActive()) {
+                    boolean usedPower = miraculous.activeAbility().value().perform(key, data, livingEntity.level(), livingEntity.blockPosition(), livingEntity, Ability.Context.from(victim));
+                    if (usedPower)
+                        event.getEntity().getData(MineraculousAttachmentTypes.MIRACULOUS).put(event.getEntity(), key, new MiraculousData(data.transformed(), data.miraculousItem(), data.curiosData(), data.tool(), data.powerLevel(), true, false, data.name(), data.look()), !event.getEntity().level().isClientSide);
                 }
-            }
-
-            if (nextPosDirection == null) {
-                nextPosDirection = switch (level.random.nextInt(5)) {
-                    case 0 -> Direction.NORTH;
-                    case 1 -> Direction.EAST;
-                    case 2 -> Direction.SOUTH;
-                    case 3 -> Direction.WEST;
-                    default -> Direction.UP;
-                };
-            }
-
-            if (!level.getBlockState(pos.relative(nextPosDirection)).canBeReplaced()) {
-                testAndApplyCataclysmToBlocks(entity, pos.relative(nextPosDirection), hand, nextPosDirection, blocksAffected);
-            }
-
-            RandomSource randomSource = level.random;
-            destroyBlocksWithin(randomSource.nextInt(4, 8), level, pos);
-
-            MineraculousCriteriaTriggers.USED_MIRACULOUS_POWER.get().trigger(entity, MiraculousType.CAT, MiraculousUsePowerTrigger.Context.BLOCK);
-            miraculousDataSet.put(entity, MiraculousType.CAT, new MiraculousData(true, catMiraculousData.miraculousItem(), catMiraculousData.curiosData(), catMiraculousData.tool(), catMiraculousData.powerLevel(), true, false, catMiraculousData.name()), true);
-            return InteractionResult.SUCCESS;
-        }
-        return InteractionResult.PASS;
-    }
-
-    private static void destroyBlocksWithin(int radius, Level level, BlockPos pos) {
-        int iRange = level.random.nextInt(radius);
-        for (int i = -iRange; i <= iRange; i++) {
-            int jRange = level.random.nextInt(radius);
-            for (int j = -jRange; j <= jRange; j++) {
-                int kRange = level.random.nextInt(radius);
-                for (int k = -kRange; k <= kRange; k++) {
-                    BlockPos newPos = pos.offset(i, j, k);
-                    BlockState newState = level.getBlockState(newPos);
-                    if (!newState.is(MineraculousBlockTags.CATACLYSM_IMMUNE) && level.random.nextBoolean()) {
-                        level.setBlock(newPos, MineraculousBlocks.CATACLYSM_BLOCK.get().defaultBlockState(), Block.UPDATE_ALL);
-                    }
-                }
-            }
+            });
         }
     }
 
     public static void onBlockInteract(PlayerInteractEvent.RightClickBlock event) {
-        if (event.getEntity() instanceof ServerPlayer serverPlayer)
-            event.setCancellationResult(testAndApplyCataclysmToBlocks(serverPlayer, event.getHitVec().getBlockPos(), event.getHand(), null, 0));
+        event.getEntity().getData(MineraculousAttachmentTypes.MIRACULOUS).getTransformed().forEach(key -> {
+            Miraculous miraculous = event.getEntity().level().holderOrThrow(key).value();
+            MiraculousData data = event.getEntity().getData(MineraculousAttachmentTypes.MIRACULOUS.get()).get(key);
+            miraculous.passiveAbilities().forEach(ability -> ability.value().perform(key, data, event.getEntity().level(), event.getPos(), event.getEntity(), Ability.Context.from(event.getLevel().getBlockState(event.getPos()), event.getPos())));
+            if (data.mainPowerActive()) {
+                boolean usedPower = miraculous.activeAbility().value().perform(key, data, event.getEntity().level(), event.getPos(), event.getEntity(), Ability.Context.from(event.getLevel().getBlockState(event.getPos()), event.getPos()));
+                if (usedPower)
+                    event.getEntity().getData(MineraculousAttachmentTypes.MIRACULOUS).put(event.getEntity(), key, new MiraculousData(data.transformed(), data.miraculousItem(), data.curiosData(), data.tool(), data.powerLevel(), true, false, data.name(), data.look()), !event.getLevel().isClientSide);
+            }
+        });
     }
 
     public static void onBlockLeftClick(PlayerInteractEvent.LeftClickBlock event) {
-        if (event.getEntity() instanceof ServerPlayer serverPlayer) {
-            if (testAndApplyCataclysmToBlocks(serverPlayer, event.getPos(), event.getHand(), null, 0).consumesAction())
-                event.setUseBlock(TriState.TRUE);
-        }
+        event.getEntity().getData(MineraculousAttachmentTypes.MIRACULOUS).getTransformed().forEach(key -> {
+            Miraculous miraculous = event.getEntity().level().holderOrThrow(key).value();
+            MiraculousData data = event.getEntity().getData(MineraculousAttachmentTypes.MIRACULOUS.get()).get(key);
+            miraculous.passiveAbilities().forEach(ability -> ability.value().perform(key, data, event.getEntity().level(), event.getPos(), event.getEntity(), Ability.Context.from(event.getLevel().getBlockState(event.getPos()), event.getPos())));
+            if (data.mainPowerActive()) {
+                boolean usedPower = miraculous.activeAbility().value().perform(key, data, event.getEntity().level(), event.getPos(), event.getEntity(), Ability.Context.from(event.getLevel().getBlockState(event.getPos()), event.getPos()));
+                if (usedPower)
+                    event.getEntity().getData(MineraculousAttachmentTypes.MIRACULOUS).put(event.getEntity(), key, new MiraculousData(data.transformed(), data.miraculousItem(), data.curiosData(), data.tool(), data.powerLevel(), true, false, data.name(), data.look()), !event.getLevel().isClientSide);
+            }
+        });
+    }
+
+    public static void onEmptyLeftClick(PlayerInteractEvent.LeftClickEmpty event) {
+        event.getEntity().getData(MineraculousAttachmentTypes.MIRACULOUS).getTransformed().forEach(key -> {
+            Miraculous miraculous = event.getEntity().level().holderOrThrow(key).value();
+            MiraculousData data = event.getEntity().getData(MineraculousAttachmentTypes.MIRACULOUS.get()).get(key);
+            miraculous.passiveAbilities().forEach(ability -> ability.value().perform(key, data, event.getEntity().level(), event.getEntity().blockPosition(), event.getEntity(), Ability.Context.from()));
+            if (data.mainPowerActive()) {
+                boolean usedPower = miraculous.activeAbility().value().perform(key, data, event.getEntity().level(), event.getEntity().blockPosition(), event.getEntity(), Ability.Context.from());
+                if (usedPower)
+                    event.getEntity().getData(MineraculousAttachmentTypes.MIRACULOUS).put(event.getEntity(), key, new MiraculousData(data.transformed(), data.miraculousItem(), data.curiosData(), data.tool(), data.powerLevel(), true, false, data.name(), data.look()), !event.getLevel().isClientSide);
+            }
+        });
     }
 
     public static ItemStack convertToCataclysmDust(ItemStack stack) {
@@ -416,13 +367,13 @@ public class MineraculousEntityEvents {
         if (original != null) {
             Style style = original.getStyle();
             MiraculousDataSet miraculousDataSet = entity.getData(MineraculousAttachmentTypes.MIRACULOUS);
-            List<MiraculousType> transformed = miraculousDataSet.getTransformed();
+            List<ResourceKey<Miraculous>> transformed = miraculousDataSet.getTransformed();
             if (transformed.size() > 1) {
-                // TODO: Support for name and color based on combinations of miraculous types, like Monarch being purple
+                // TODO: Support for name and color based on combinations of miraculous, like Monarch being purple
             } else {
-                MiraculousData data = miraculousDataSet.get(transformed.get(0));
-                if (data.miraculousItem().getItem() instanceof MiraculousItem miraculousItem) {
-                    Style newStyle = style.withColor(miraculousItem.getPowerColor());
+                MiraculousData data = miraculousDataSet.get(transformed.getFirst());
+                if (data.miraculousItem().has(MineraculousDataComponents.MIRACULOUS)) {
+                    Style newStyle = style.withColor(entity.level().holderOrThrow(data.miraculousItem().get(MineraculousDataComponents.MIRACULOUS)).value().color());
                     if (!data.name().isEmpty())
                         return Component.literal(data.name()).setStyle(newStyle);
                     return original.copy().setStyle(newStyle.withObfuscated(true));
@@ -453,5 +404,20 @@ public class MineraculousEntityEvents {
             if (event.getType() == profession.get())
                 event.getTrades().putAll(trades);
         });
+    }
+
+    public static void onEntityJoinLevel(EntityJoinLevelEvent event) {
+        if (event.getLevel().isClientSide) {
+            TommyLibServices.NETWORK.sendToServer(new ServerboundRequestMiraculousDataSetSyncPayload(event.getEntity().getId()));
+        } else {
+            if (event.getEntity() instanceof ServerPlayer player) {
+                event.getEntity().getData(MineraculousAttachmentTypes.MIRACULOUS).getTransformed(event.getLevel().registryAccess()).forEach(miraculous -> {
+                    if (miraculous.activeAbility().value() instanceof NightVisionAbility nightVisionAbility) {
+                        nightVisionAbility.resetNightVision(player);
+                    }
+                    miraculous.passiveAbilities().stream().filter(ability -> ability.value() instanceof NightVisionAbility).map(ability -> (NightVisionAbility) ability.value()).forEach(nightVisionAbility -> nightVisionAbility.resetNightVision(player));
+                });
+            }
+        }
     }
 }
